# rust-grpc-hello

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.rust-musl  Readme.md  build.rs  musl-build.sh  rust-musl.sh  server-container.sh
proto-spec/: hellosvc.proto
src/: hellosvc.rs  hellosvc_grpc.rs  lib.rs
