[package]
name = "rust-grpc-hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.8.1"
futures = "0.1.29"
futures-cpupool = "0.1.8"
tls-api = "0.2.0"
grpc = "0.6.1"

[build-dependencies]
protoc-rust-grpc = "0.6.1"
